data/derived/comb/progs/unify/prog2275.ml.out
Characters 82-84:
  | Sine(e1) -> sin(pi* eval(e1,x,y));;
                    ^^
Error: This expression has type float but an expression was expected of type
         int
